--- a/src/XamarinBoilerplate.iOS/XamarinBoilerplate.iOS.csproj
+++ b/src/XamarinBoilerplate.iOS/XamarinBoilerplate.iOS.csproj
@@ -8,9 +8,9 @@
     <ProjectGuid>{388060D8-CFA7-49C4-8DAB-FAA853603F7C}</ProjectGuid>
     <ProjectTypeGuids>{FEACFBD2-3405-455C-9665-78FE426C6842};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Exe</OutputType>
-    <RootNamespace>MobileTemplate.iOS</RootNamespace>
+    <RootNamespace>XamarinBoilerplate.iOS</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
-    <AssemblyName>MobileTemplate.iOS</AssemblyName>
+    <AssemblyName>XamarinBoilerplate.iOS</AssemblyName>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
@@ -50,6 +50,7 @@
     <CodesignKey>iPhone Developer</CodesignKey>
     <MtouchDebug>true</MtouchDebug>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
+    <MtouchSdkVersion>10.3</MtouchSdkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
