major PCL headache around porting Mobile.Oauth2 lib onto this PCL profile (Profile 7). Got around it by playing with the pcl deps

--- a/src/XamarinBoilerplate.iOS/XamarinBoilerplate.iOS.csproj
+++ b/src/XamarinBoilerplate.iOS/XamarinBoilerplate.iOS.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Service\AssetServiceiOS.cs" />
     <Compile Include="Service\SampleServiceiOS.cs" />
     <ITunesArtwork Include="iTunesArtwork%402x" />
+    <None Include="app.config" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist">
       <SubType>Designer</SubType>
