--- a/test/XamarinBoilerplate.Droid.Test/XamarinBoilerplate.Droid.Test.csproj
+++ b/test/XamarinBoilerplate.Droid.Test/XamarinBoilerplate.Droid.Test.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Service\AssetServiceDroidTest.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
