--- a/src/XamarinBoilerplate.Core/packages.config
+++ b/src/XamarinBoilerplate.Core/packages.config
@@ -1,15 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="portable45-net45+win8" />
+  <package id="FubarCoder.RestSharp.Portable.Core" version="4.0.7" targetFramework="portable45-net45+win8" />
+  <package id="FubarCoder.RestSharp.Portable.HttpClient" version="4.0.7" targetFramework="portable45-net45+win8" />
   <package id="HockeySDK.Xamarin" version="4.1.0" targetFramework="portable45-net45+win8" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable45-net45+win8" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable45-net45+win8" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable45-net45+win8" />
   <package id="modernhttpclient" version="2.4.2" targetFramework="portable45-net45+win8" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="portable45-net45+win8" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable45-net45+win8" />
+  <package id="PCLCrypto" version="2.0.147" targetFramework="portable45-net45+win8" />
+  <package id="PInvoke.BCrypt" version="0.3.2" targetFramework="portable45-net45+win8" />
+  <package id="PInvoke.Kernel32" version="0.3.2" targetFramework="portable45-net45+win8" />
+  <package id="PInvoke.NCrypt" version="0.3.2" targetFramework="portable45-net45+win8" />
+  <package id="PInvoke.Windows.Core" version="0.3.2" targetFramework="portable45-net45+win8" />
   <package id="ReactiveProperty" version="2.9.0" targetFramework="portable45-net45+win8" />
   <package id="Rx-Core" version="2.2.5" targetFramework="portable45-net45+win8" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="portable45-net45+win8" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="portable45-net45+win8" />
   <package id="Rx-Main" version="2.2.5" targetFramework="portable45-net45+win8" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="portable45-net45+win8" />
+  <package id="Validation" version="2.3.7" targetFramework="portable45-net45+win8" />
+  <package id="Xamarin.Auth" version="1.5.0.3" targetFramework="portable45-net45+win8" />
   <package id="Xamarin.Forms" version="2.3.3.180" targetFramework="portable45-net45+win8" />
   <package id="Xamarin.Forms.Pages" version="2.3.3.180" targetFramework="portable45-net45+win8" />
   <package id="Xamarin.Forms.Theme.Base" version="1.0.0.43-pre1" targetFramework="portable45-net45+win8" />
