--- a/src/XamarinBoilerplate.Droid/XamarinBoilerplate.Droid.csproj
+++ b/src/XamarinBoilerplate.Droid/XamarinBoilerplate.Droid.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Service\SampleServiceDroid.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
